--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "check-format": "prettier --check .",
+    "format-and-lint": "npm run format && npm run lint:js:fix && npm run lint:css:fix && npm run lint"
   },
   "dependencies": {
     "react": "^19.1.0",
