--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "lint:css": "stylelint '**/*.{css,scss}'",
-    "lint:css:fix": "stylelint '**/*.{css,scss}' --fix",
+    "lint:css": "npx stylelint '**/*.{css,scss}'",
+    "lint:css:fix": "npx stylelint '**/*.{css,scss}' --fix",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "format-and-lint": "npm run format && npm run lint:js:fix && npm run lint:css:fix && npm run lint"
@@ -31,6 +31,10 @@
     "globals": "^16.0.0",
     "prettier": "^3.6.1",
     "sass": "^1.89.2",
+    "stylelint": "^16.21.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-order": "^7.0.0",
+    "stylelint-scss": "^6.12.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
